Harden transcript trimming and presence policy reads